hphp/test/quick/hsl_systemlib_disabled.php.expectf

Fatal error: Call to undefined function HH\Experimental\BuiltInLib\VecBI\map() in %s/hsl_systemlib_disabled.php on line 8
